# Daily-restart-of-the-Internet-router-FritzBox-

./: .env.example  .gitignore  Dockerfile  README.md  cron_fritzbox-reboot_github.sh  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/fritzbox-rebooter/: config.py  main.py  rebooter.py
tests/: test_rebooter.py
